Finish transactional BTree insert

--- a/BTree/Makefile
+++ b/BTree/Makefile
@@ -1,11 +1,14 @@
-CC = /s/gcc-4.8.1/bin/gcc 
+CC = /s/gcc-4.8.1/bin/gcc
+FLAG = -D STANDALONE  # -std=c99 # -std=c++11
 
-FLAG = -D STANDALONE
-
-all: lbt # tsxbt 
+all: lbt tsxbt 
 
 lbt: threads2j.c
 	$(CC) $(FLAG) -g -O threads2j.c -o lbt -mrtm -lm -lpthread
 
+tsxbt: tsx2j.c
+	$(CC) $(FLAG) -g -O tsx2j.c -o tsxbt -mrtm -lm -lpthread
+
 clean:
-	rm lbt 
+	rm lbt tsxbt *.db
+
