modified rand() % (SIZE - transc_size), added sorted_set

--- a/simpleDStruct/Makefile
+++ b/simpleDStruct/Makefile
@@ -1,7 +1,10 @@
 CC = /s/gcc-4.8.1/bin/g++
 FLAG = -std=c++11
 
-all: hash arr bench
+all: list hash arr bench
+
+list: listbench.cpp
+	$(CC) $(FLAG) -g -O listbench.cpp -o list -mrtm -lm -lpthread
 
 hash: hashbench.cpp
 	$(CC) $(FLAG) -g -O hashbench.cpp -o hash -mrtm -lm -lpthread
@@ -13,4 +16,4 @@ bench: bench.cpp
 	$(CC) $(FLAG) -g -O bench.cpp -o bench -mrtm
 
 clean:
-	rm bench arr hash
+	rm bench arr hash list
